--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,17 @@
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "illuminate/database": "~5.1",
+        "vlucas/phpdotenv": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "FLAPI\\": "src/FLAPI/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
