--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     },
     "scripts": {
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
-        "test": "phpunit"
+        "test": "phpunit",
+        "docs": "apidoc -i src/FLAPI/ -o docs/ -c ./"
     }
 }
